fix skills section spacing to match other sections

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -587,7 +587,7 @@ body {
 }
 
 .skill {
-    padding: 25px;
+    padding: 7px 0;
     width: 100%;
 }
 
